# visual-rag-toolkit

./: .gitignore  LICENSE  README.md  demo_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  publish_pypi.yaml
benchmarks/: README.md  __init__.py  analyze_results.py  benchmark_datasets.txt  prepare_submission.py  quick_test.py  run_vidore.py
benchmarks/vidore_beir_qdrant/: run_qdrant_beir.py
benchmarks/vidore_tatdqa_test/: COMMANDS.md  dataset_loader.py  metrics.py  run_qdrant.py  sweep_eval.py
demo/: __init__.py  app.py  commands.py  config.py  download_models.py  evaluation.py  example_metadata_mapping_sigir.json  indexing.py  qdrant_utils.py  results.py  test_qdrant_connection.py
demo/ui/: __init__.py  benchmark.py  header.py  playground.py  sidebar.py  upload.py
examples/: COMMANDS.md  config.yaml  process_pdfs.py  search_demo.py
scripts/: colqwen25_probe.py  compare_eval_scopes.py  compare_models_sample_queries.py  create_qdrant_payload_indexes.py  debug_failed_docs.py  debug_vidore_qrels_alignment.py  dedupe_failure_logs.py  force_qdrant_reindex.py  inspect_qdrant_collection.py  qdrant_clone_collection_no_index.py  qdrant_debug_collection.py  qdrant_disable_hnsw.py  qdrant_modify_vectors_smoketest.py  qdrant_rebuild_collection_no_index.py  qdrant_recompute_colqwen_pooling_from_initial.py  query_token_stats.py  update_qdrant_indexing_threshold.py
tests/: __init__.py  test_config.py  test_pdf_processor.py  test_pooling.py  test_strategies.py
visual_rag/: __init__.py  config.py  demo_runner.py  qdrant_admin.py
visual_rag/cli/: __init__.py  main.py
visual_rag/embedding/: __init__.py  pooling.py  visual_embedder.py
visual_rag/indexing/: __init__.py  cloudinary_uploader.py  pdf_processor.py  pipeline.py  qdrant_indexer.py
visual_rag/preprocessing/: __init__.py  crop_empty.py
visual_rag/retrieval/: __init__.py  multi_vector.py  single_stage.py  three_stage.py  two_stage.py
visual_rag/visualization/: __init__.py  saliency.py
